deploy/nginx-ingress/jetti-nginx-ingress-controller.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-0.13.1
    component: controller
    heritage: Tiller
    release: jetti
  name: jetti-nginx-ingress-controller
  namespace: default
spec:
  clusterIP: 10.3.246.173
  externalTrafficPolicy: Cluster
  ports:
  - name: https
    nodePort: 31976
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: nginx-ingress
    component: controller
    release: jetti
  sessionAffinity: ClientIP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: nginx-ingress
    chart: nginx-ingress-0.13.1
    component: controller
    heritage: Tiller
    release: jetti
  name: jetti-nginx-ingress-controller
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-ingress
      component: controller
      release: jetti
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: 4dec2362f3f072c24019d333c3cdb9e19dde4eb71f13cd5cc3359979fc048a76
      creationTimestamp: null
      labels:
        app: nginx-ingress
        component: controller
        release: jetti
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --default-backend-service=default/jetti-nginx-ingress-default-backend
        - --election-id=ingress-controller-leader
        - --ingress-class=nginx
        - --configmap=default/jetti-nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.12.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx-ingress-controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: jetti-nginx-ingress
      serviceAccountName: jetti-nginx-ingress
      terminationGracePeriodSeconds: 60
