deploy/nginx-ingress/test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "hello-app"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
spec:
  tls:
    - hosts:
      - hello.jetti-app.com  
      secretName: jetti-ssl
  rules:
    - host: hello.jetti-app.com
      http:
        paths:
        - path: /hello
          backend:
            serviceName: hello-app
            servicePort: 8080
